--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -1,24 +1,75 @@
-name:                dynamic-pipeline
-version:             0.1.0.0
--- synopsis:
--- description:
-homepage:            https://github.com/jproyo/dynamic-pipeline#readme
-license:             BSD3
-license-file:        LICENSE
-author:               Juan Pablo Royo Sales
-maintainer:          juanpablo.royo@gmail.com
-copyright:            Copyright (C) 2021 Juan Pablo Royo Sales
-category:            Data,Data Flow,Pipes
-build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
+cabal-version: 1.12
 
-library
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
+-- This file has been generated from package.yaml by hpack version 0.33.0.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: 38b9ce6eabd33a44141baf0b72ac2521632e39280932934675e4b15092e478f9
+
+name:           dynamic-pipeline
+version:        0.1.0.0
+category:       Data,Data Flow,Pipes
+homepage:       https://github.com/jproyo/dynamic-pipeline#readme
+bug-reports:    https://github.com/jproyo/dynamic-pipeline/issues
+author:         Juan Pablo Royo Sales
+maintainer:     juanpablo.royo@gmail.com
+copyright:      Copyright (C) 2021 Juan Pablo Royo Sales
+license:        BSD3
+license-file:   LICENSE
+build-type:     Simple
+extra-source-files:
+    README.md
 
 source-repository head
-  type:     git
+  type: git
   location: https://github.com/jproyo/dynamic-pipeline
+
+library
+  exposed-modules:
+      Dynamic.Pipeline
+  other-modules:
+      Paths_dynamic_pipeline
+  hs-source-dirs:
+      src
+  default-extensions: ConstraintKinds DataKinds DeriveAnyClass DeriveFunctor DeriveGeneric DeriveLift DerivingStrategies DerivingVia EmptyCase FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses MultiWayIf NoImplicitPrelude OverloadedStrings PackageImports PartialTypeSignatures Rank2Types RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeOperators TypeFamilies
+  ghc-options: -Wall -fno-warn-partial-type-signatures -fconstraint-solver-iterations=0 -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -fno-warn-deprecations -fno-warn-orphans
+  build-depends:
+      HList
+    , async
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , exceptions
+    , relude >=1.0.0.0
+    , trifecta
+    , unagi-chan
+  if false
+    other-modules:
+        Paths_connected_comp
+  default-language: Haskell2010
+
+test-suite conn-comp-tests
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Paths_dynamic_pipeline
+  hs-source-dirs:
+      test
+  default-extensions: ConstraintKinds DataKinds DeriveAnyClass DeriveFunctor DeriveGeneric DeriveLift DerivingStrategies DerivingVia EmptyCase FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses MultiWayIf NoImplicitPrelude OverloadedStrings PackageImports PartialTypeSignatures Rank2Types RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeOperators TypeFamilies
+  ghc-options: -Wall -fno-warn-partial-type-signatures -fconstraint-solver-iterations=0 -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -fno-warn-deprecations -fno-warn-orphans -threaded -O2 -rtsopts -with-rtsopts=-N -Wno-unused-local-binds -Wno-unused-matches
+  build-tool-depends:
+      hspec-discover:hspec-discover
+  build-depends:
+      HList
+    , QuickCheck
+    , async
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , dynamic-pipeline
+    , exceptions
+    , hspec ==2.*
+    , relude >=1.0.0.0
+    , trifecta
+    , unagi-chan
+  default-language: Haskell2010
