--- a/package.yaml
+++ b/package.yaml
@@ -1,16 +1,97 @@
-name: dynamic-pipeline
-version: '0.1.0.0'
-category: Data,Data Flow,Pipes
-author: Juan Pablo Royo Sales
+name:       dynamic-pipeline
+version:    0.1.0.0
+category:   Data,Data Flow,Pipes
+author:     Juan Pablo Royo Sales
 maintainer: juanpablo.royo@gmail.com
-copyright: Copyright (C) 2021 Juan Pablo Royo Sales
-license: BSD3
-github: jproyo/dynamic-pipeline
+copyright:  Copyright (C) 2021 Juan Pablo Royo Sales
+license:    BSD3
+github:     jproyo/dynamic-pipeline
+
 extra-source-files:
 - README.md
+
+ghc-options:
+  - -Wall
+  - -fno-warn-partial-type-signatures
+  - -fconstraint-solver-iterations=0
+  - -Wincomplete-record-updates
+  - -Wincomplete-uni-patterns
+  - -Wredundant-constraints
+  - -Wno-unused-top-binds
+  - -fno-warn-deprecations
+  - -fno-warn-orphans
+
+default-extensions:
+  - ConstraintKinds
+  - DataKinds
+  - DeriveAnyClass
+  - DeriveFunctor
+  - DeriveGeneric
+  - DeriveLift
+  - DerivingStrategies
+  - DerivingVia
+  - EmptyCase
+  - FlexibleContexts
+  - FlexibleInstances
+  - FunctionalDependencies
+  - GADTs
+  - GeneralizedNewtypeDeriving
+  - LambdaCase
+  - MultiParamTypeClasses
+  - MultiWayIf
+  - NoImplicitPrelude
+  - OverloadedStrings
+  - PackageImports
+  - PartialTypeSignatures
+  - Rank2Types
+  - RankNTypes
+  - RecordWildCards
+  - ScopedTypeVariables
+  - StandaloneDeriving
+  - TemplateHaskell
+  - TupleSections
+  - TypeApplications
+  - TypeOperators
+  - TypeFamilies
+
 dependencies:
-- base >=4.7 && <5
+  - base >= 4.7 && < 5
+  - async
+  - bytestring
+  - containers
+  - exceptions
+  - HList
+  - relude >= 1.0.0.0
+  - unagi-chan
+  - trifecta
+
 library:
   source-dirs: src
   exposed-modules:
-  - Lib
+    - Dynamic.Pipeline
+  when:
+    - condition: false
+      other-modules: Paths_connected_comp
+
+tests:
+  conn-comp-tests:
+    main: Spec.hs
+    source-dirs:
+      - test
+    build-tools:
+      - hspec-discover
+    ghc-options:
+      - -threaded
+      - -O2
+      - -rtsopts
+      - -with-rtsopts=-N
+      # TODO remove no warnings
+      - -Wno-unused-local-binds
+      - -Wno-unused-matches
+    dependencies:
+      - dynamic-pipeline
+      - hspec == 2.*
+      - QuickCheck
+      - relude >= 1.0.0.0
+      
+
