--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4fe984a68c825ccda27493e049123fc1c1e7f3ef61b7389dbfc6e729c3bd32e8
+-- hash: da3f330232b432f6bc6efc1271d982ed8c367fb68891a64431d968a5d69d8ac8
 
 name:           dynamic-pipeline
 version:        0.1.0.0
@@ -53,6 +53,9 @@ library
 executable repeated-example
   main-is: Main.hs
   other-modules:
+      Graph.ConnComp
+      Graph.ConnectedComp
+      Misc.RepeatedDP
       Paths_dynamic_pipeline
   hs-source-dirs:
       examples
