--- a/package.yaml
+++ b/package.yaml
@@ -88,6 +88,7 @@ executables:
       - dynamic-pipeline
       - async
       - HList
+      - trifecta
     ghc-options:
       - -threaded
       - -O3
