--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3ac821423d8ac59385eccb1a5acd21985fb0db24a4a4b8b5430c06badd21ed5f
+-- hash: d9d5db42ea00632f4b42ff204f28295820276fc78b6e8277aa495a70a1544a65
 
 name:           dynamic-pipeline
 version:        0.1.0.0
@@ -39,17 +39,15 @@ library
     , async
     , base >=4.7 && <5
     , bytestring
-    , containers
     , lens
     , relude >=1.0.0.0
-    , trifecta
     , unagi-chan
   if false
     other-modules:
         Paths_connected_comp
   default-language: Haskell2010
 
-executable repeated-example
+executable examples
   main-is: Main.hs
   other-modules:
       Graph.ConnComp
@@ -65,9 +63,9 @@ executable repeated-example
     , async
     , base >=4.7 && <5
     , bytestring
-    , containers
     , dynamic-pipeline
     , lens
+    , optparse-applicative
     , relude >=1.0.0.0
     , trifecta
     , unagi-chan
@@ -90,11 +88,9 @@ test-suite conn-comp-tests
     , async
     , base >=4.7 && <5
     , bytestring
-    , containers
     , dynamic-pipeline
     , hspec ==2.*
     , lens
     , relude >=1.0.0.0
-    , trifecta
     , unagi-chan
   default-language: Haskell2010
