--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -4,11 +4,35 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 68193258b119a8666fc24b772483e44503b2185c2f4d8d542ca1b0e7b5addd83
+-- hash: cffd326d9e959cebe1bc1cd3441221d331f43645c28b8d059a36e26f2fd0f16e
 
 name:           dynamic-pipeline
 version:        0.1.0.0
-category:       Data,Data Flow,Pipes
+description:    @dynamic-pipeline@ is a __/Type Safe/__ Dynamic and Parallel Streaming Library, which is an implementation of __Dynamic Pipeline Paradigm (DPP)__ 
+                proposed in this paper [DPP](https://biblioteca.sistedes.es/articulo/the-dynamic-pipeline-paradigm/).
+                .
+                The aim of this tool is to provide all the __Type level__ constructs to guide the user in building a /DPP/ flow to solve any algorithm that fits on 
+                this computational model. 
+                .
+                The idea behind the implementation is similar to other __Type level_ programming libraries like [@servant@](https://hackage.haskell.org/package/servant)
+                . 
+                Some of the feature of this library includes:
+                .
+                * /Small Number of Dependencies/: Dependencies have been kept to minimum in order to reduce compilation time.
+                .
+                * /Type Level Encoding/: As it was explained before, there is an intensive use of Type Level techniques in the Library in order to guide the user in 
+                defining the Flow Model and fill the gaps with the combinators provided and the Compiler indications. On the other hand some /Type Custom Errors/ have been
+                encoded in the Library in order to provide meaningful messages about the Data Flow Grammar Defined in /DPP/.
+                .
+                * /Stream Parallelization/: __DPP__ model follows a /Parallelization Pipeline/ approach with the use of intermediate Channels. All the burden have been hidden 
+                for the user in order to reduce complexity and focus on the algorithm problem implementations.
+                .
+                * /Safe Scoped Execution/: Use of Existential to define the Scope execution of /DPP/ reducing even more the complexity to the user.
+                .
+                Import "DynamicPipeline" for using the library.
+                .
+                * /Examples/: <src/examples examples directory> in the package
+category:       Data,Data Flow,Pipes,Streaming,Parallel,Type-safe
 homepage:       https://github.com/jproyo/dynamic-pipeline#readme
 bug-reports:    https://github.com/jproyo/dynamic-pipeline/issues
 author:         Juan Pablo Royo Sales
@@ -23,6 +47,10 @@ extra-source-files:
 source-repository head
   type: git
   location: https://github.com/jproyo/dynamic-pipeline
+
+flag examples
+  manual: True
+  default: False
 
 library
   exposed-modules:
@@ -43,9 +71,6 @@ library
     , lens
     , relude >=1.0.0.0
     , unagi-chan
-  if false
-    other-modules:
-        Paths_connected_comp
   default-language: Haskell2010
 
 executable examples
@@ -70,6 +95,10 @@ executable examples
     , relude >=1.0.0.0
     , trifecta
     , unagi-chan
+  if flag(examples)
+    buildable: True
+  else
+    buildable: False
   default-language: Haskell2010
 
 test-suite conn-comp-tests
