--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: cffd326d9e959cebe1bc1cd3441221d331f43645c28b8d059a36e26f2fd0f16e
+-- hash: c0d6635966e64a1210a12b2c6367c3519065cc9d32b0cf7d992f28124cf10071
 
 name:           dynamic-pipeline
 version:        0.1.0.0
@@ -68,6 +68,7 @@ library
     , async
     , base >=4.7 && <5
     , bytestring
+    , compdata
     , lens
     , relude >=1.0.0.0
     , unagi-chan
@@ -89,6 +90,7 @@ executable examples
     , async
     , base >=4.7 && <5
     , bytestring
+    , compdata
     , dynamic-pipeline
     , lens
     , optparse-applicative
@@ -118,6 +120,7 @@ test-suite conn-comp-tests
     , async
     , base >=4.7 && <5
     , bytestring
+    , compdata
     , dynamic-pipeline
     , hspec ==2.*
     , lens
