--- a/stack.yaml
+++ b/stack.yaml
@@ -41,8 +41,10 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
+- compdata-0.12.1
 - HList-0.5.0.0
 - relude-1.0.0.1
+- tree-view-0.5.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
