--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e29d4cec6885960f7300e2ec3fa5662765bef558bcbabb7746bc8550b0962c7a
+-- hash: b3e4537cba4bf84b0d63bc15e900b8fa52ab19fa297b873b0024f00c3f1f881f
 
 name:           dynamic-pipeline
 version:        0.1.0.0
@@ -14,7 +14,7 @@ description:    @dynamic-pipeline@ is a __/Type Safe/__ Dynamic and Parallel Str
                 The aim of this tool is to provide all the __Type level__ constructs to guide the user in building a /DPP/ flow to solve any algorithm that fits on 
                 this computational model. 
                 .
-                The idea behind the implementation is similar to other __Type level_ programming libraries like [@servant@](https://hackage.haskell.org/package/servant)
+                The idea behind the implementation is similar to other __Type level__ programming libraries like [@servant@](https://hackage.haskell.org/package/servant)
                 . 
                 Some of the feature of this library includes:
                 .
@@ -48,10 +48,6 @@ source-repository head
   type: git
   location: https://github.com/jproyo/dynamic-pipeline
 
-flag examples
-  manual: True
-  default: False
-
 library
   exposed-modules:
       DynamicPipeline
@@ -59,7 +55,6 @@ library
       DynamicPipeline.Channel
       DynamicPipeline.Flow
       DynamicPipeline.Stage
-      Paths_dynamic_pipeline
   hs-source-dirs:
       src
   default-extensions: ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia EmptyCase FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses MultiWayIf NoImplicitPrelude OverloadedStrings PackageImports PartialTypeSignatures PolyKinds Rank2Types RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeOperators TypeFamilies
@@ -73,6 +68,9 @@ library
     , lens
     , relude >=1.0.0.0
     , unagi-chan
+  if false
+    other-modules:
+        Paths_dynamic_pipeline
   default-language: Haskell2010
 
 executable examples
@@ -81,7 +79,6 @@ executable examples
       Graph.ConnComp
       Graph.ConnectedComp
       Misc.RepeatedDP
-      Paths_dynamic_pipeline
   hs-source-dirs:
       examples
   default-extensions: ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia EmptyCase FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses MultiWayIf NoImplicitPrelude OverloadedStrings PackageImports PartialTypeSignatures PolyKinds Rank2Types RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeOperators TypeFamilies
@@ -98,10 +95,9 @@ executable examples
     , relude >=1.0.0.0
     , trifecta
     , unagi-chan
-  if flag(examples)
-    buildable: True
-  else
-    buildable: False
+  if false
+    other-modules:
+        Paths_dynamic_pipeline
   default-language: Haskell2010
 
 test-suite conn-comp-tests
