--- a/package.yaml
+++ b/package.yaml
@@ -13,7 +13,7 @@ description: |
   The aim of this tool is to provide all the __Type level__ constructs to guide the user in building a /DPP/ flow to solve any algorithm that fits on 
   this computational model. 
   .
-  The idea behind the implementation is similar to other __Type level_ programming libraries like [@servant@](https://hackage.haskell.org/package/servant)
+  The idea behind the implementation is similar to other __Type level__ programming libraries like [@servant@](https://hackage.haskell.org/package/servant)
   . 
   Some of the feature of this library includes:
   .
@@ -98,23 +98,18 @@ dependencies:
   - unagi-chan
 
 library:
+  when:
+  - condition: false
+    other-modules: Paths_dynamic_pipeline
   source-dirs: src
   exposed-modules:
     - DynamicPipeline
 
-flags: 
-  examples:
-    manual: True
-    default: False
-
 executables:
   examples:
     when:
-    - condition: flag(examples)
-      then:
-        buildable: true
-      else:
-        buildable: false
+    - condition: false
+      other-modules: Paths_dynamic_pipeline
     source-dirs:
       examples
     main:
