--- a/.github/workflows/dynamic-pipeline.yml
+++ b/.github/workflows/dynamic-pipeline.yml
@@ -38,3 +38,5 @@ jobs:
       run: cabal build --enable-tests --enable-benchmarks all
     - name: Run tests
       run: cabal test all
+    - name: Generate Documentation
+      run: cabal haddock --internal
