--- a/.github/workflows/dynamic-pipeline.yml
+++ b/.github/workflows/dynamic-pipeline.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+defaults:
+  run:
+    shell: bash
+    working-directory: ./app
+
 jobs:
   build:
 
@@ -38,5 +43,7 @@ jobs:
       run: cabal build --enable-tests --enable-benchmarks all
     - name: Run tests
       run: cabal test all
+    - name: Create doc dir
+      run: mkdir -p ./app/docs
     - name: Generate Documentation
-      run: cabal haddock --internal
+      run: cabal v2-haddock --builddir="./app/docs" --haddock-for-hackage --enable-doc
