Change base to solve conflict

--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c030b2735193127a43f66de6b554a6ded0721f78300b9fd5ba3010fa49ad445f
+-- hash: d3c6c3c8809cc4d6ea5e502c6e5cddfe1347ed45a20c8df1a76dccdcb054c925
 
 name:           dynamic-pipeline
 version:        0.1.0.0
@@ -60,9 +60,9 @@ library
   default-extensions: ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia EmptyCase FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses MultiWayIf NoImplicitPrelude OverloadedStrings PackageImports PartialTypeSignatures PolyKinds Rank2Types RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeOperators TypeFamilies
   ghc-options: -Wall -fno-warn-partial-type-signatures -fconstraint-solver-iterations=0 -fspecialise-aggressively -fexpose-all-unfoldings -flate-specialise -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -Wno-unused-foralls -fno-warn-deprecations -fno-warn-orphans
   build-depends:
-      HList ==0.5.0.0
+      HList
     , async
-    , base >=4.7 && <5
+    , base >=4.7 && <4.12
     , bytestring
     , compdata
     , lens
@@ -86,7 +86,7 @@ executable examples
   build-depends:
       HList
     , async
-    , base >=4.7 && <5
+    , base >=4.7 && <4.12
     , bytestring
     , compdata
     , dynamic-pipeline
@@ -112,10 +112,10 @@ test-suite conn-comp-tests
   build-tool-depends:
       hspec-discover:hspec-discover
   build-depends:
-      HList ==0.5.0.0
+      HList
     , QuickCheck
     , async
-    , base >=4.7 && <5
+    , base >=4.7 && <4.12
     , bytestring
     , compdata
     , dynamic-pipeline
