--- a/.github/workflows/dynamic-pipeline.yml
+++ b/.github/workflows/dynamic-pipeline.yml
@@ -15,30 +15,28 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-haskell@v1
       with:
-        ghc-version: '8.10.4'
+        ghc-version: '8.10.3'
         cabal-version: '3.2'
+        enable-stack: true
+        stack-version: 'latest'
 
     - name: Cache
       uses: actions/cache@v1
       env:
-        cache-name: cache-cabal
+        cache-name: cache-stack
       with:
-        path: ~/.cabal
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
+        path: ~/.stack
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.yaml') }}-${{ hashFiles('**/stack.yaml.lock') }}
         restore-keys: |
           ${{ runner.os }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
     - name: Install dependencies
-      run: |
-        cabal update
-        cabal build --only-dependencies --enable-tests --enable-benchmarks
+      run: stack build --only-dependencies --test --no-run-tests --fast
     - name: Build
-      run: cabal build --enable-tests --enable-benchmarks all
-    - name: Run tests
-      run: cabal test all
+      run: stack build --test --fast
     - name: Create doc dir
       run: mkdir -p ./docs
     - name: Generate Documentation
-      run: cabal v2-haddock --builddir="./app/docs" --haddock-for-hackage --enable-doc
+      run: stack haddock --no-haddock-deps --haddock-internal --haddock-arguments "--odir=./docs"
