--- a/.github/workflows/dynamic-pipeline-release.yml
+++ b/.github/workflows/dynamic-pipeline-release.yml
@@ -1,10 +1,9 @@
-name: Haskell CI
+name: Release
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - "v*"
 
 jobs:
   build:
@@ -36,3 +35,7 @@ jobs:
       run: stack build --only-dependencies --test --no-run-tests --fast
     - name: Build
       run: stack build --test --fast
+    - name: Generate Documentation
+      run: stack haddock --no-haddock-deps --haddock-internal
+    - name: Publish Package
+      run: stack upload .
