--- a/.github/workflows/dynamic-pipeline-release.yml
+++ b/.github/workflows/dynamic-pipeline-release.yml
@@ -39,6 +39,6 @@ jobs:
       run: stack haddock --no-haddock-deps --haddock-internal
     - name: Publish Package
       env:
-        HACKAGE_USERNAME: {{ secrets.HACKAGE_USERNAME }}
-        HACKAGE_PASSWORD: {{ secrets.HACKAGE_PASSWORD }}
+        HACKAGE_USERNAME: ${{ secrets.HACKAGE_USERNAME }}
+        HACKAGE_PASSWORD: ${{ secrets.HACKAGE_PASSWORD }}
       run: stack upload .
