--- a/stack.yaml
+++ b/stack.yaml
@@ -70,3 +70,5 @@ extra-deps:
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
 allow-newer: true
+
+save-hackage-creds: false
