--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 89464c83938526024dd64162719f12e35ea24cc23291981cf39a72fe4472d93f
+-- hash: 7737f19f69f26500eab65522e5ab55cec54a10ee22c4ba4628bdf0fa84c090c4
 
 name:           dynamic-pipeline
 version:        0.1.0.0
@@ -95,14 +95,14 @@ library
       TypeFamilies
   ghc-options: -Wall -fno-warn-partial-type-signatures -fconstraint-solver-iterations=0 -fspecialise-aggressively -fexpose-all-unfoldings -flate-specialise -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -Wno-unused-foralls -fno-warn-deprecations -fno-warn-orphans
   build-depends:
-      HList
-    , async
+      HList >=0.4.0.0 && <=0.5.0.0
+    , async >=2.1.0 && <=2.2.3
     , base >=4.7 && <5
-    , bytestring
-    , compdata
-    , lens
-    , relude >=1.0.0.0
-    , unagi-chan
+    , bytestring >=0.10.9.0 && <=0.11.1.0
+    , compdata >=0.10 && <=0.12.1
+    , lens >=4.19 && <=5.0.1
+    , relude >=0.7.0.0 && <=1.0.0.1
+    , unagi-chan >=0.4.1.0
   default-language: Haskell2010
 
 executable examples
@@ -154,14 +154,14 @@ executable examples
       HList
     , async
     , base >=4.7 && <5
-    , bytestring
-    , compdata
+    , bytestring >=0.10.9.0 && <=0.11.1.0
+    , compdata >=0.10 && <=0.12.1
     , dynamic-pipeline
-    , lens
+    , lens >=4.19 && <=5.0.1
     , optparse-applicative
-    , relude >=1.0.0.0
+    , relude >=0.7.0.0 && <=1.0.0.1
     , trifecta
-    , unagi-chan
+    , unagi-chan >=0.4.1.0
   default-language: Haskell2010
 
 test-suite conn-comp-tests
@@ -211,15 +211,15 @@ test-suite conn-comp-tests
   build-tool-depends:
       hspec-discover:hspec-discover
   build-depends:
-      HList
+      HList >=0.4.0.0 && <=0.5.0.0
     , QuickCheck
-    , async
+    , async >=2.1.0 && <=2.2.3
     , base >=4.7 && <5
-    , bytestring
-    , compdata
+    , bytestring >=0.10.9.0 && <=0.11.1.0
+    , compdata >=0.10 && <=0.12.1
     , dynamic-pipeline
     , hspec ==2.*
-    , lens
+    , lens >=4.19 && <=5.0.1
     , relude >=1.0.0.0
-    , unagi-chan
+    , unagi-chan >=0.4.1.0
   default-language: Haskell2010
