--- a/package.yaml
+++ b/package.yaml
@@ -89,13 +89,13 @@ default-extensions:
 
 dependencies:
   - base >= 4.7 && < 5
-  - async
-  - bytestring
-  - compdata
-  - HList
-  - lens
-  - relude >= 1.0.0.0
-  - unagi-chan
+  - async >= 2.1.0 && <= 2.2.3
+  - bytestring >= 0.10.9.0 && <= 0.11.1.0
+  - compdata >= 0.10 && <= 0.12.1
+  - HList >= 0.4.0.0 && <= 0.5.0.0
+  - lens >= 4.19 && <= 5.0.1
+  - relude >= 0.7.0.0 && <= 1.0.0.1
+  - unagi-chan >= 0.4.1.0
 
 library:
   when:
