--- a/package.yaml
+++ b/package.yaml
@@ -6,6 +6,9 @@ maintainer: juanpablo.royo@gmail.com
 copyright:  Copyright (C) 2021 Juan Pablo Royo Sales
 license:    BSD3
 github:     jproyo/dynamic-pipeline
+synopsis: | 
+  @dynamic-pipeline@ is a __/Type Safe/__ Dynamic and Parallel Streaming Library, which is an implementation of __Dynamic Pipeline Paradigm (DPP)__ 
+  proposed in this paper [DPP](https://biblioteca.sistedes.es/articulo/the-dynamic-pipeline-paradigm/).
 description: |
   @dynamic-pipeline@ is a __/Type Safe/__ Dynamic and Parallel Streaming Library, which is an implementation of __Dynamic Pipeline Paradigm (DPP)__ 
   proposed in this paper [DPP](https://biblioteca.sistedes.es/articulo/the-dynamic-pipeline-paradigm/).
@@ -92,7 +95,7 @@ dependencies:
   - async >= 2.1.0 && <= 2.2.3
   - bytestring >= 0.10.9.0 && <= 0.11.1.0
   - compdata >= 0.10 && <= 0.12.1
-  - HList >= 0.4.0.0 && <= 0.5.0.0
+  - HList >= 0.5.0.0
   - lens >= 4.19 && <= 5.0.1
   - relude >= 0.7.0.0 && <= 1.0.0.1
   - unagi-chan >= 0.4.1.0
