--- a/package.yaml
+++ b/package.yaml
@@ -6,9 +6,7 @@ maintainer: juanpablo.royo@gmail.com
 copyright:  Copyright (C) 2021 Juan Pablo Royo Sales
 license:    BSD3
 github:     jproyo/dynamic-pipeline
-synopsis: | 
-  @dynamic-pipeline@ is a __/Type Safe/__ Dynamic and Parallel Streaming Library, which is an implementation of __Dynamic Pipeline Paradigm (DPP)__ 
-  proposed in this paper [DPP](https://biblioteca.sistedes.es/articulo/the-dynamic-pipeline-paradigm/).
+synopsis:   Dynamic Pipeline is a Type Safe Dynamic and Parallel Streaming Library, which is an implementation of Dynamic Pipeline Paradigm (DPP)
 description: |
   @dynamic-pipeline@ is a __/Type Safe/__ Dynamic and Parallel Streaming Library, which is an implementation of __Dynamic Pipeline Paradigm (DPP)__ 
   proposed in this paper [DPP](https://biblioteca.sistedes.es/articulo/the-dynamic-pipeline-paradigm/).
